--- a/flask_app/app/templates/registration/registration.html
+++ b/flask_app/app/templates/registration/registration.html
@@ -10,34 +10,108 @@
         <form method="POST" class="space-y-8">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <div>
-                    <label for="subject"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Username</label>
-                    <input type="text" id="subject"
+                <legend class="border-bottom mb-4">Join today</legend>
+                <div class="form-group">
+                    {{ form.username.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900
+                    dark:text-gray-300') }}
+                    <!-- label for="subject"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Username</label -->
+
+                    {% if form.username.errors %}
+                    {{ form.username(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.username(class='form-control form-control-lg block p-3 w-full text-sm text-gray-900
+                    bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500
+                    focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+                    dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
+                    {% endif %}
+
+                    <!--input type="text" id="subject"
                         class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
-                        placeholder="How will you be known" required>
+                        placeholder="How will you be known" required -->
                 </div>
-                <div>
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your
-                        email</label>
-                    <input type="email" id="email"
+                <div class="form-group">
+                    {{ form.email.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900
+                    dark:text-gray-300') }}
+
+                    <!-- label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your
+                        email</label -->
+
+                    {% if form.email.errors %}
+                    {{ form.email(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.email(class='form-control form-control-lg shadow-sm bg-gray-50 border border-gray-300
+                    text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5
+                    dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
+                    dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
+                    {% endif %}
+
+                    <!-- input type="email" id="email"
                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
-                        placeholder="name@flowbite.com" required>
+                        placeholder="name@flowbite.com" required -->
                 </div>
-                <div>
-                    <label for="subject"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label>
-                    <input type="text" id="subject"
+                <div class="form-group">
+                    {{ form.password.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900
+                    dark:text-gray-300') }}
+                    <!-- label for="subject"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label -->
+
+                    {% if form.password.errors %}
+                    {{ form.password(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.password(class='form-control form-control-lg block p-3 w-full text-sm text-gray-900
+                    bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500
+                    focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+                    dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
+                    {% endif %}
+
+                    <!-- input type="text" id="subject"
                         class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
-                        placeholder="Let us know how we can help you" required>
+                        placeholder="Let us know how we can help you" required -->
                 </div>
-                <div class="sm:col-span-2">
+                <div class="form-group">
+                    {{ form.password2.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300') }}
+
+                    <!-- label for="subject"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label -->
+
+                    {% if form.password2.errors %}
+                    {{ form.password2(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password2.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.password2(class='form-control form-control-lg block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
+                    {% endif %}
+
+                    <!-- input type="text" id="subject"
+                        class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
+                        placeholder="Let us know how we can help you" required -->
+                </div>
+                <!-- div class="sm:col-span-2">
                     <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Your
                         message</label>
                     <textarea id="message" rows="6"
                         class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Leave a comment..."></textarea>
-                </div>
+                </div -->
             </fieldset>
 
             <div class="form-group">
